# chatbot-practice

./: .env.template  README.md  main.py  pyproject.toml
src/chatbot/: controller.py
