[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel Amato",email = "miamato@ucm.es"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.66.3,<2.0.0)",
    "fastapi (>=0.115.11,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
